<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f3f5f7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="#eef2f5"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profileedit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/EditProfile"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/textViewMysub"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Subscribe"
                android:layout_marginTop="15dp"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/changePass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15dp"
                android:text="@string/ChangePassword" />
            <TextView
                android:id="@+id/sub"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15dp"
                android:text="@string/my" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15dp"
                android:text="@string/Logout" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>